small fix with scroll area for horizontal direction (prevents extra scrollbar space on the right)

--- a/electron-app-market-scraper/renderer/index.css
+++ b/electron-app-market-scraper/renderer/index.css
@@ -181,7 +181,6 @@
   -webkit-overflow-scrolling: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
-  scrollbar-gutter: stable;
 
   &:hover,
   &:focus-within {
@@ -205,6 +204,14 @@
   &:focus-within::-webkit-scrollbar-thumb {
     background: var(--color-muted-foreground);
   }
+}
+
+@utility scrollbar-stable {
+  scrollbar-gutter: stable;
+}
+
+@utility scrollbar-auto {
+  scrollbar-gutter: auto;
 }
 
 @utility app-image {
@@ -241,7 +248,4 @@
     color: var(--color-foreground) !important;
     caret-color: var(--color-foreground);
   }
-  /* a {
-    -webkit-user-drag: none;
-  } */
 }
